--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,8 @@
 @import
   "../node_modules/uikit/dist/scss/uikit-mixins.scss",
   "../node_modules/uikit/dist/scss/core/variables.scss",
+  "variables.scss",
+  "fonts.scss",
 
   // Defaults
   "../node_modules/uikit/dist/scss/core/base.scss",
