Adds menu styles for mobile, etc.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,9 @@
-<header></header>
+<header>
+  <nav class="uk-visible-small">
+    <ul class="full-width-list mobile-nav">
+      <li class="full-width-list__item mobile-nav__item"><a href="/about/">About</a></li>
+      <li class="full-width-list__item mobile-nav__item"><a href="/blog/">Blog</a></li>
+      <li class="full-width-list__item mobile-nav__item"><a href="/portfolio/">Portfolio</a></li>
+    </ul>
+  </nav>
+</header>
