--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   {% include head.html %}
   <body>
+    {% include title.html %}
     {% include header.html %}
     <div class="uk-container uk-container-center">
       {{ content }}
