--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
   "../node_modules/uikit/dist/scss/uikit-mixins.scss",
   "../node_modules/uikit/dist/scss/core/variables.scss",
   "variables.scss",
+  "base.scss",
   "fonts.scss",
 
   // Custom Theme
