Adds a dope closing tag to the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,4 @@
-<footer></footer>
+<footer class="uk-margin">
+  <p class="uk-text-small uk-text-muted uk-text-center">Copyright Cameron Hurd {{ 'now' | date: '%Y' }}</p>
+  <p class="uk-text-center"><img src="/images/close-tag.svg" width="33" alt="Closing tag monogram" /></p>
+</footer>
