--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,13 @@
 <header>
+  <nav class="uk-hidden-small uk-navbar">
+    <div class="uk-container uk-container-center">
+      <ul class="uk-navbar-nav">
+        <li><a class="uk-navbar-nav__item--first" href="/about/">About</a></li>
+        <li><a href="/blog/">Blog</a></li>
+        <li><a href="/portfolio/">Portfolio</a></li>
+      </ul>
+    </div>
+  </nav>
   <nav class="uk-visible-small">
     <ul class="full-width-list mobile-nav">
       <li class="full-width-list__item mobile-nav__item"><a href="/about/">About</a></li>
