--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,26 +1,33 @@
 // Variables. Many of them UiKit Overrides
 
 // Colors
-$grey:                      #807f7b;
-$beige:                     #faf9f0;
+$grey:                         #807f7b;
+$beige:                        #faf9f0;
+$base-body-background:         linear-gradient(to bottom, $beige 50%, rgba($beige, 0)),
+                               url('/images/topo-map.svg') 50% 100%,
+                               $beige;
 
-$base-body-background:      linear-gradient(to bottom, $beige 50%, rgba($beige, 0)),
-                              url('/images/topo-map.svg') 50% 100%,
-                              $beige;
+$subtitle-color:               $grey;
+$base-link-color:              $grey;
 
-$subtitle-color:            $grey;
-$base-link-color:           $grey;
+$navbar-background:            rgba(0, 0, 0, 0.03);
+$navbar-nav-hover-background:  rgba(0, 0, 0, 0.03);
+
+$navbar-nav-color:             $grey;
 
 // Typography
 $base-body-font-family:     "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-heading-font-family:  "Fanwood", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$navbar-nav-font-family:    $base-body-font-family;
 
 @mixin hook-base-h1() { font-style: italic; }
 @mixin hook-base-h2() { @include hook-base-h1; }
 $base-h1-font-size:         46px;
 
 // Margins & Spacing
-$base-margin:               25px;
-$utility-margin:            $base-margin;
-$base-margin-vertical:      $base-margin;
-$full-width-list-horizontal-padding: 25px;
+$base-margin:                         25px;
+$utility-margin:                      $base-margin;
+$base-margin-vertical:                $base-margin;
+$full-width-list-horizontal-padding:  25px;
+$navbar-nav-padding-horizontal:       20px;
+
