Adds UiKit js, and initial draft for home/about.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,3 +2,7 @@
   <p class="uk-text-small uk-text-muted uk-text-center">Copyright Cameron Hurd {{ 'now' | date: '%Y' }}</p>
   <p class="uk-text-center"><img src="/images/close-tag.svg" width="33" alt="Closing tag monogram" /></p>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.4.min.js"><\/script>')</script>
+<script src="js/ch.js"></script>
