--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
   <body>
     {% include title.html %}
     {% include header.html %}
-    <div class="uk-container uk-container-center">
-      {{ content }}
+    <div class="uk-container uk-container-center{% if page.container %} {{ page.container }}{% endif %}">
+      <div class="content uk-margin uk-margin-top">{{ content }}</div>
     </div>
     {% include footer.html %}
   </body>
