--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -19,6 +19,8 @@ $navbar-nav-color:             $grey;
 $base-body-font-family:     "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-heading-font-family:  "Fanwood", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $navbar-nav-font-family:    $base-body-font-family;
+$icon-font-path:            'https://cdnjs.cloudflare.com/ajax/libs/uikit/2.23.0/fonts/';
+
 
 @mixin hook-base-h1() { font-style: italic; }
 @mixin hook-base-h2() { @include hook-base-h1; }
