--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,16 +1,16 @@
-<form class="uk-form uk-grid uk-grid-medium" data-uk-grid-match="{target: '.uk-panel'}">
+<form class="uk-form uk-grid uk-grid-medium" data-uk-grid-margin data-uk-grid-match="{target: '.uk-panel'}" action="https://cameronhurd.wufoo.com/forms/z1ejoaws0k1x83j/#public" method="POST">
   <div class="uk-width-medium-1-3">
     <div class="uk-panel">
       <div class="uk-form-row">
-        <label for="name" class="uk-form-label">Your Name</label>
+        <label for="Field3" class="uk-form-label name">Your Name</label>
         <div class="uk-form-controls">
-          <input type="text" name="name" placeholder="Rob Ford" class="uk-width-1-1" />
+          <input type="text" name="Field3" placeholder="Rob Ford" class="uk-width-1-1 name" />
         </div>
       </div>
       <div class="uk-form-row">
-        <label for="email" class="uk-form-label">Your Email</label>
+        <label for="Field4" class="uk-form-label email">Your Email</label>
         <div class="uk-form-controls">
-          <input type="text" name="email" placeholder="r.ford@toronto.on.ca" class="uk-width-1-1" />
+          <input type="text" name="Field4" placeholder="r.ford@toronto.on.ca" class="uk-width-1-1 email" />
         </div>
       </div>
     </div>
@@ -18,11 +18,19 @@
   <div class="uk-width-medium-2-3">
     <div class="uk-panel">
       <div class="uk-form-row">
-        <label for="message" class="uk-form-label">Your Message</label>
+        <label for="Field5" class="uk-form-label message">Your Message</label>
         <div class="uk-form-controls">
-          <textarea name="message" rows="4" placeholder="Hey, I've been thinking..." class="uk-width-1-1"></textarea>
+          <textarea name="Field5" rows="4" placeholder="Hey, I've been thinking..." class="uk-width-1-1 message"></textarea>
         </div>
       </div>
     </div>
   </div>
+  <div class="uk-width-1-1">
+    <div class="uk-form-row">
+      <input type="hidden" id="idstamp" name="idstamp" value="zZOlBUyR+xEJubab+lQolsO87EwTzsbZio3XZsdK9JU=" />
+      <input type="submit" value="Submit" class="uk-align-center uk-button uk-button-primary" />
+    </div>
+  </div>
 </form>
+
+
