--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,6 +2,7 @@
 
 // Colors
 $grey:                         #807f7b;
+$black:                        #444;
 $beige:                        #faf9f0;
 $base-body-background:         linear-gradient(to bottom, $beige 50%, rgba($beige, 0)),
                                url('/images/topo-map.svg') 50% 100%,
