--- a/css/main.scss
+++ b/css/main.scss
@@ -55,6 +55,9 @@
   "../node_modules/uikit/dist/scss/core/column.scss",
   "../node_modules/uikit/dist/scss/core/animation.scss",
 
+  // Extras
+  "../node_modules/uikit/dist/scss/components/tooltip.scss",
+
   // Javascript
   "../node_modules/uikit/dist/scss/core/dropdown.scss",
   "../node_modules/uikit/dist/scss/core/modal.scss",
