--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,8 +1,6 @@
 html {
   min-height: 100%;
+  background: $base-body-background;
 }
 
-@media screen and (min-width: 400px) {
-  background-size: cover;
-}
 
