--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -26,6 +26,14 @@ $button-primary-hover-color:          $grey;
 $button-primary-active-color:         $grey;
 
 // Typography
+$base-body-font-size:                 20px;
+$base-body-line-height:               28px;
+$base-h1-font-size:                   48px;
+$base-h1-line-height:                 50px;
+$base-h2-font-size:                   36px;
+$base-h2-line-height:                 40px;
+$base-h3-font-size:                   24px;
+$base-h3-line-height:                 30px;
 $base-body-font-family:               "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-heading-font-family:            "Fanwood", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $navbar-nav-font-family:              $base-body-font-family;
@@ -34,10 +42,14 @@ $icon-font-path:                      'https://cdnjs.cloudflare.com/ajax/libs/ui
 @mixin hook-base-h1() { font-style: italic; }
 @mixin hook-base-h2() { @include hook-base-h1; }
 
-$base-h1-font-size:                   46px;
+@mixin base-font() { font-size: 14px; }
+@mixin hook-form() { @include base-font; }
+.uk-form {
+  @include base-font;
+}
 
 // Margins & Spacing
-$base-margin:                         25px;
+$base-margin:                         35px;
 $utility-margin:                      $base-margin;
 $base-margin-vertical:                $base-margin;
 $full-width-list-horizontal-padding:  25px;
