temporarily link the blog to its only post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="uk-container uk-container-center{% if page.container %} {{ page.container }}{% endif %}">
       <ul class="uk-navbar-nav">
         <li><a class="uk-navbar-nav__item--first{% if page.url == '/index.html' %} uk-active{% endif %}" href="/">About</a></li>
-        <li><a title="One day, a blog will live here." data-uk-tooltip>Blog</a></li>
+        <li><a href="{% post_url 2015-12-02-is-there-really-not-an-app-for-that %}">Blog</a></li>
         <li><a title="Forthcoming!" data-uk-tooltip>Portfolio</a></li>
       </ul>
     </div>
