initial pass at adding some cool footnote functionality

--- a/css/main.scss
+++ b/css/main.scss
@@ -71,6 +71,7 @@
 
   // Custom Theme
   "atoms/subtitle.scss",
+  "atoms/footnote-aside.scss",
 
   "molecules/mobile-nav.scss",
   "molecules/full-width-list.scss"
