--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,4 +5,4 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.4.min.js"><\/script>')</script>
-<script src="js/ch.js"></script>
+<script src="/js/ch.js"></script>
