--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <ul class="uk-navbar-nav">
         <li><a class="uk-navbar-nav__item--first{% if page.url == '/index.html' %} uk-active{% endif %}" href="/">About</a></li>
         <li><a href="{% post_url 2015-12-02-is-there-really-not-an-app-for-that %}">Blog</a></li>
-        <li><a title="Forthcoming!" data-uk-tooltip>Portfolio</a></li>
+        <li><a target="_BLANK" href="https://adventurouswebdesign.com">Portfolio</a></li>
       </ul>
     </div>
   </nav>
